docs: added documentation for delete opening
